# deverp

./: README.md
adr/: erpnext.md  password-management.md  requirements.md
api-collections/: login.http  sign-up.http
supabase/: config.toml
tauri-app/: Cargo.toml  package-lock.json
tauri-app/src/: app.rs  login_form.rs  main.rs
tauri-app/src-tauri/: .env  Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs
tauri-app/src/auth/components/: login.rs  logout.rs  mod.rs  signup.rs
tauri-app/style/: output.css
